Client: Fixed spacing on checkbox list

--- a/DexCMS.Core.Client/Sass/Applications/ControlPanel/Components/_form.scss
+++ b/DexCMS.Core.Client/Sass/Applications/ControlPanel/Components/_form.scss
@@ -22,3 +22,7 @@ form textarea {
 .has-error > .input-group-btn {
     vertical-align: top;
 }
+
+.checkbox {
+    margin-left: 20px;
+}
